@@ -5,6 +5,10 @@ const globals = LOTW.globals;
 const{NS}=globals;
 const{log,cwarn,cerr, make, mkdv}=util;
 
+const{popin}=globals.api.widgets;
+
+//log(popin);
+
 export const app = function(Win) {
 
 //Var«
@@ -16,7 +20,7 @@ let lines;
 let text_lines;
 let bin_lines;
 let bytes;
-let nb;
+let nb, nb_len;
 let nb_done;
 let nlns;
 let text_mode = false;
@@ -40,6 +44,10 @@ let killed = false;
 let start_byte;
 let char_w;
 
+let BASE=10;
+let is_going_to = false;
+let mouse_mode = false;
+
 //»
 
 //DOM«
@@ -47,7 +55,8 @@ let char_w;
 let wrapdiv = make('div');
 wrapdiv._bgcol="#000";
 wrapdiv._pos="absolute";
-wrapdiv._loc(0,0);
+//wrapdiv._loc(0,0);
+//wrapdiv._r = 0;
 wrapdiv._tcol = TCOL;
 wrapdiv._fw = FW;
 wrapdiv._ff = FF;
@@ -58,8 +67,10 @@ wrapdiv.webkitFontSmoothing="antialiased";
 wrapdiv.style.whiteSpace = "pre";
 
 Main.appendChild(wrapdiv);
+//log(wrapdiv);
 let tabdiv = make('div');
-tabdiv._w="100%";
+//tabdiv._padl="100px";
+//tabdiv._w="100%";
 tabdiv.style.userSelect = "text"
 tabdiv._pos="absolute";
 tabdiv.onclick=e=>{
@@ -68,8 +79,18 @@ tabdiv.onclick=e=>{
         if (window.getSelection().isCollapsed) textarea.focus();
     },10);
 }
-tabdiv._loc(0,0);
+tabdiv._r=0;
+//log(wrapdiv);
 tabdiv.style.tabSize = 4;
+
+let numdiv = make('div');
+numdiv._pos="absolute";
+numdiv._loc(0,0);
+numdiv._w=100;
+numdiv._h="100%";
+numdiv._over="hidden";
+//numdiv._bgcol="#002";
+wrapdiv.appendChild(numdiv);
 
 wrapdiv.tabdiv = tabdiv;
 wrapdiv.appendChild(tabdiv);
@@ -108,9 +129,10 @@ statbar._add(messdiv, loaddiv, perdiv);
 
 //Funcs«
 
-const stat=()=>{//«
+const stat=(opts={})=>{//«
 	messdiv.innerText='Spacebar toggles ascii view. Use the arrow/paging keys to scroll';
 	if (is_loading) loaddiv.innerText=`Loading: ${Math.floor(100*(nb_done/nb))}%`;
+	else if (opts.go_to) loaddiv.innerHTML=opts.go_to.toString(BASE);
 	else loaddiv.innerText="";
 	let from = scroll_num * (ch_w);
 	let to = (scroll_num + h) * (ch_w);
@@ -118,7 +140,6 @@ const stat=()=>{//«
 	perdiv.innerText=`${from} - ${to} / ${nb}`;
 };//»
 const getgrid=()=>{//«
-//    let _ = wrapdiv;
     let tdiv = tabdiv;
     let usech = "X";
     let str = "";
@@ -128,9 +149,9 @@ const getgrid=()=>{//«
         if (Win.killed) return;
         str+=usech;
         tdiv.innerHTML = str;
-        if (tdiv.scrollWidth > wrapdiv._w) {
+        if (tdiv.scrollWidth+100 > wrapdiv._w) {
             tdiv.innerHTML = usech.repeat(str.length-1);
-            wrapdiv._w = tdiv.clientWidth;
+//            wrapdiv._w = tdiv.clientWidth;
             ncols = str.length - 1;
 			char_w = Math.floor(ncols/3)
             break;
@@ -164,8 +185,8 @@ log(wrapdiv);
     tdiv.innerHTML="";
     wrapdiv._over="hidden";
 }//»
-const render=()=>{//«
-
+const render=(opts={})=>{//«
+	let {fast, go_to}=opts;
 	if (text_mode) lines = text_lines;
 	else lines = bin_lines;
 	if (!lines) return;
@@ -174,6 +195,10 @@ const render=()=>{//«
 	let slicefrom = scry;
 	let sliceto = scry + nrows;
 	let uselines=[];
+	numdiv.innerHTML="";
+	tabdiv.innerHTML="";
+	let from = scroll_num * (ch_w);
+	let lnno = 0;
 	for (let i=slicefrom; i < sliceto; i++) {
 		let ln = lines[i];
 		if (!ln) uselines.push([""]);
@@ -181,17 +206,59 @@ const render=()=>{//«
 			let newln = ln.slice(0,w);
 			uselines.push(newln);
 		}
+		let ndv = make('div');
+		ndv.innerHTML=(((scroll_num + lnno) * (ch_w)).toString(BASE)).padStart(nb_len, "0");
+		numdiv._add(ndv);
+		lnno++;
 	}
 	let outarr = [];
 	let len = uselines.length;
 	let donum = len;
+	let iter=0;
 	for (let i = 0; i < donum; i++) {
 		let arr = uselines[i];
 		let ind;
-		outarr.push(arr.join(""));
+		let ln = arr.join("");
+		if (fast){
+			outarr.push(ln);
+		}
+		else {
+			let lnarr = ln.split(" ");
+			lnarr.pop();
+			let lndv = mkdv();
+			for (let n of lnarr){
+				let nsp = make("span");
+				nsp._which = iter+from;
+				if (go_to){
+					if (iter+from===go_to){
+						nsp._bgcol="#fcc";
+						nsp._tcol="#000";
+						nsp._fw="bold";
+					}
+				}
+				if (mouse_mode) {
+					nsp.onmouseover=()=>{
+						loaddiv.innerHTML=nsp._which.toString(BASE);
+						nsp._bgcol="#ccc";
+						nsp._tcol="#000";
+						nsp._fw="bold";
+					};
+					nsp.onmouseout=()=>{
+						loaddiv.innerHTML="";
+						nsp._bgcol="";
+						nsp._tcol="";
+						nsp._fw="";
+					};
+				}
+				nsp.innerHTML = n+"&nbsp;";
+				lndv.appendChild(nsp);
+				iter++;
+			}
+			tabdiv.appendChild(lndv);
+		}
 	}
-	tabdiv.innerText = outarr.join("\n");
-	stat();
+	if (fast) tabdiv.innerText = outarr.join("\n");
+	stat({go_to});
 };//»
 const make_lines=(which)=>{//«
 	if (is_loading) return;
@@ -225,16 +292,8 @@ const make_lines=(which)=>{//«
 				let byt = bytes[j];
 				let binch = byt.toString(16).lpad(2,"0")
 				binln.push(binch[0],binch[1]," ")
-				if (byt >= 33 && byt <= 126) txtln.push(String.fromCharCode(byt)," "," ");
-				else txtln.push(" "," "," ");
-/*
-				else if (byt==32) txtln.push(" "," "," ");
-				else{
-					let ch = byt.toString(16).lpad(2,"0")
-					txtln.push(ch[0],ch[1]," ")
-				}
-*/
-
+				if (byt >= 33 && byt <= 126) txtln.push(String.fromCharCode(byt),"\xa0"," ");
+				else txtln.push("\xa0","\xa0"," ");
 			}
 			text_lines.push(txtln);
 			bin_lines.push(binln);
@@ -242,10 +301,10 @@ const make_lines=(which)=>{//«
 		if (finished) {
 			is_loading = false;
 			stat();
-if (start_byte){
-	scroll_num = Math.floor(start_byte/Math.floor(ncols/3));
-	render();	
-}
+			if (start_byte){
+				scroll_num = Math.floor(start_byte/Math.floor(ncols/3));
+				render();	
+			}
 		}
 		else {
 			setTimeout(()=>{
@@ -254,8 +313,6 @@ if (start_byte){
 		}
 	}
 	dopage();
-//	if (text_mode) lines = text_lines;
-//	else lines = bin_lines;
 	render();
 };//»
 
@@ -303,6 +360,20 @@ const init = () =>{//«
 	ch_w = Math.floor(ncols/3);
 	make_lines();
 };//»
+const goto_num = async()=>{//«
+	if (is_going_to) return;
+	is_going_to = true;
+
+	let num = await popin(`Goto: 0-${nb-1}`, {enterOK: true});
+	is_going_to = false;
+	if (!num) return;
+	num = parseInt(num);
+	if (isNaN(num)) return;
+	if (num<0) num=0;
+	else if (num > nb-1) num = nb-1;
+	scroll_num = Math.floor(num/ch_w);
+	render({go_to: num});
+}/*»*/
 
 //»
 
@@ -313,6 +384,7 @@ this.onloadfile=arg=>{//«
 	start_byte = 0;
 	bytes=arg;
 	nb = bytes.length;
+	nb_len = (nb.toString(BASE)).length;
 	init();
 };//»
 this.onkill = () => {//«
@@ -322,28 +394,31 @@ this.onkill = () => {//«
 		clearInterval(check_stop_loading_interval);
 	}
 };//»
+this.onkeyup=(e,k)=>{
+	if (["DOWN_","UP_","PGDOWN_","PGUP_"].includes(k)) render();
+};
 this.onkeydown=(e,k)=>{//«
 	if (k=="DOWN_"){
 		if(scroll_num+1+h>lines.length)return;
 		scroll_num++;
-		render();
+		render({fast:true});
 	}
 	else if (k=="UP_"){
 		if (scroll_num > 0) {
 			scroll_num--;
-			render();
+			render({fast:true});
 		}
 	}
 	else if(k=="PGDOWN_"){
 		if(scroll_num+1+h>lines.length)return;
 		scroll_num+=h;
 		if (scroll_num+h > lines.length) scroll_num = lines.length-h;
-		render();
+		render({fast:true});
 	}
 	else if(k=="PGUP_"){
 		scroll_num -=h;
 		if (scroll_num<0)scroll_num=0;
-		render();
+		render({fast:true});
 	}
     else if (k=="HOME_"){
         if (scroll_num == 0 ) return;
@@ -357,6 +432,20 @@ this.onkeydown=(e,k)=>{//«
     }
 	else if (k=="SPACE_"){
 		text_mode = !text_mode;
+		render();
+	}
+	else if (k=="/_"){
+		goto_num();
+	}
+	else if (k=="m_"){
+		mouse_mode = !mouse_mode;
+		render();
+		loaddiv.innerHTML=`Mouse mode: ${mouse_mode}`;
+	}
+	else if (k=="h_"){
+		if (BASE==10) BASE=16;
+		else BASE=10;
+		nb_len = (nb.toString(BASE)).length;
 		render();
 	}
 	else if (k=="LEFT_"){
