@@ -1,1 +1,1 @@
-["README.md/1398","apps",["Audio.js/4093","BinView.js/7765","Folder.js/10644","Help.js/979","MediaPlayer.js/1235","Meta.js/2279","Music.js/4844","Terminal.js/149388","TextEdit.js/5003","YourApp.js/174","dev",["Ermpt.js/507","Grammar.js/15536","HTML.js/1313","Hands.js/15575","Launcher.js/20502","Player.js/2121","Poker5.js/4891","TakePicture.js/3475","Worker.js/1195","audio",["Blah.js/3601","MakeSomeBass.js/5879","Midi.js/3953","Noise.js/2141","Vowels.js/13142","cool",["RandomWalk.js/5090"],"zsave",["Faust.js/35023","Jazzed.js/18165","Jazzed2.js/31797","Karplus.js/30845","Noisecraft.js/11935"]],"svg",["SVG1.js/12599","SVG2.js/18599"],"zold",["Poker.js/26967","Poker2.js/76136","Poker3.js/65113","Poker4.js/36503"]],"games",["Arcade.js/12600"],"hw",["MidiCtl.js/3709"],"media",["2Cameras.js/3258","Camera.js/3674","MediaPlayer.js/16115","VideoCutter.js/44730"],"template",["Basic.js/489","Template.js/364","WebAudio.js/2877"],"util",["ImageView.js/2697","Unicoder.js/16897"]],"bin",["ALLLIST/106","APPLIST/104","DIRGET/47","DOBEAUTIFY/71","DOLINKS/330","DOZIP/801","GITUP/396","MKLOTWLIST/136","MKSYMLINKS/487","PYSERV/84","SSLPYSERV.py/528","dojsbeautify/71","js",["getdir.js/665"],"vallgrep/398","vvallgrep/582"],"coms",["audio.js/1766","esprima.js/170200","extra.js/10807","fs.js/18052","mail.js/22829","shell.js/173922","test",["dummy.js/21"],"test.js/3041","yt.js/66863"],"doc",["EDITING/1847","START_HERE/2609","apis",["imap-flow.js/104043","imapflow.txt/38670"],"concepts",["DATA_IPC/4482"],"dev",["CHANGES/2577","DESK/4332","TERMINAL/85918","VIM/16037"]],"index.html/975","mods",["audio",["multi_freq_worklet.js/1502","random_walk_worklet.js/3039"],"games",["GBEmulator.js/9708","NESEmulator.js/222309","binjgb.wasm/87232"],"help",["shell.js/3591"],"hw",["midi.js/2323"],"term",["email.js/10385","less.js/18889","menu.js/8592","vim.js/131258"],"util",["math.js/12125","nn",["snake",["worker.js/29373"]],"pretty.js/93856","walt.js/204893","wasm.js/42764","wasmparser.js/34331","webmparser.js/58730"],"workers",["poker.js/37417"]],"node",["server.js/6591","svcs",["imap.js/14635","mount.js/16553","smtp.js/1428","template.js/1831","ws.js/2156","ytdl.js/11982"]],"sys",["config.js/7557","desk.js/218638","fs.js/65578","util.js/21257"],"www",["blog.css/181","config",["bashrc.txt/692","desert.vim/2952","nano-hack.txt/2324","vimrc.txt/1443"],"desk.css/1930","docs",["blog-template.html/291","help.html/9327","what-it-is.html/4370"],"examples",["test.sh/66"],"favicon.ico/15086","lotw256.png/41075","lotw48.png/2966"],"zzhold",["DESK/1306","SHELL/17941"]]
+["README.md/1398","apps",["Audio.js/4093","BinView.js/9815","Folder.js/10644","Help.js/979","MediaPlayer.js/2074","Meta.js/2279","Music.js/4844","Terminal.js/149386","TextEdit.js/5003","YourApp.js/174","dev",["Ermpt.js/507","Grammar.js/15536","HTML.js/1313","Hands.js/15575","Launcher.js/20502","Player.js/2121","Poker5.js/4891","TakePicture.js/3475","Worker.js/1195","audio",["Blah.js/3601","MakeSomeBass.js/5879","Midi.js/3953","Noise.js/2182","Vowels.js/13142","cool",["RandomWalk.js/5090"],"zsave",["Faust.js/35023","Jazzed.js/18165","Jazzed2.js/31797","Karplus.js/30845","Noisecraft.js/11935"]],"svg",["SVG1.js/12599","SVG2.js/18599"],"zold",["Poker.js/26967","Poker2.js/76136","Poker3.js/65113","Poker4.js/36503"]],"games",["Arcade.js/12600"],"hw",["MidiCtl.js/3709"],"media",["2Cameras.js/3258","Camera.js/3674","MediaPlayer.js/16115","VideoCutter.js/44730"],"template",["Basic.js/489","Template.js/364","WebAudio.js/2877"],"util",["ImageView.js/2697","Unicoder.js/16897"]],"bin",["ALLLIST/106","APPLIST/104","DIRGET/47","DOBEAUTIFY/71","DOLINKS/330","DOZIP/801","GITUP/396","MKLOTWLIST/136","MKSYMLINKS/487","PYSERV/84","SSLPYSERV.py/528","dojsbeautify/71","js",["getdir.js/665"],"vallgrep/398","vvallgrep/582"],"coms",["audio.js/1766","esprima.js/170200","extra.js/10807","fs.js/18052","mail.js/22829","shell.js/173922","test",["dummy.js/21"],"test.js/3041","yt.js/66863"],"doc",["EDITING/1847","START_HERE/2609","apis",["imap-flow.js/104043","imapflow.txt/38670"],"concepts",["DATA_IPC/4482"],"dev",["CHANGES/2853","DESK/7759","TERMINAL/85918","VIM/16037"]],"index.html/975","mods",["audio",["multi_freq_worklet.js/1502","random_walk_worklet.js/3039"],"games",["GBEmulator.js/9708","NESEmulator.js/222309","binjgb.wasm/87232"],"help",["shell.js/3591"],"hw",["midi.js/2323"],"term",["email.js/10385","less.js/18889","menu.js/8592","vim.js/131258"],"util",["math.js/12125","nn",["snake",["worker.js/29373"]],"pretty.js/93856","walt.js/204893","wasm.js/42764","wasmparser.js/34331","webmparser.js/58730"],"workers",["poker.js/37417"]],"node",["server.js/6591","svcs",["imap.js/14635","mount.js/16553","smtp.js/1428","template.js/1831","ws.js/2156","ytdl.js/11982"]],"sys",["config.js/7557","desk.js/215639","fs.js/65578","util.js/21257"],"www",["blog.css/181","config",["bashrc.txt/692","desert.vim/2952","nano-hack.txt/2324","vimrc.txt/1443"],"desk.css/1930","docs",["blog-template.html/291","help.html/9327","what-it-is.html/4370"],"examples",["test.sh/66"],"favicon.ico/15086","lotw256.png/41075","lotw48.png/2966"],"zzhold",["DESK/1306","SHELL/17941"]]
